apps/staging/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: plex
spec:
  ingressClassName: traefik
  rules:
    - host: plex2.lab.nohermosa.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex-web
                port:
                  number: 32400
